--- a/slides/module1/cs440S2014-chapter1.html
+++ b/slides/module1/cs440S2014-chapter1.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html><head>
-<title>Computer Science 290 Fall 2013</title>
+<title>Computer Science 440 Spring 2014</title>
 <meta charset='utf-8'>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
 <link href='../css/big.css' rel='stylesheet'type='text/css'/>
 <script src='../css/big.js'></script>
 </head><body>
 
-<div><em>Computer Science 290</em> <em class="green">Fall</em> 2013</div>
+<div><em>Computer Science 440</em> <em class="green">Spring</em> 2014</div>
 
 <div>Gregory M. Kapfhammer</div>
 
 <div><em class="orange">Keep in touch!</em><p>Office Hours, Email, Web, Twitter</div>
 
-<DIV>Software Engineering</DIV>
+<DIV>Operating Systems</DIV>
 
 <div><img src="../images/Software.png"/></div>
 <div><img src="../images/Software.png"/><em class="orange">Software</em></div>
@@ -21,60 +21,27 @@
 <div><img src='http://farm3.staticflickr.com/2484/3887600015_6c1b946772_z.jpg' /></div>
 <div><img src='http://farm3.staticflickr.com/2484/3887600015_6c1b946772_z.jpg' /><em>People</em></div>
 
-<div>
-	Concepts
-</div>
-
-<div>
-	Methodologies
-</div>
-
-<div>
-	Techniques
-</div>
-
-<div>
-	Tools
-</div>
-
-<div>
-	<em class="green">
-			Very Exciting!
-	</em>
-</div>
-
-<div>Why?</div>
-
-<div>
-	<quote>
-		<em class="orange">"The magic of myth and legend has come true in our time"</em>
-	</quote>
-	<p>
-		Frederick P. Brooks, Jr.
-</div>
-
-<div>What is Brooks talking about?</div>
-
-<div><em class="plum">Software</em></div>
-
-<!-- <div> -->
-<!-- 	<em class="sky">Syllabus</em> -->
-<!-- </div> -->
-
+<div
 <div>Highlights of this course</div>
 
-<div><em class="orange">Group</em> projects</div>
+<div><em class="scarlet">Important Concepts</em></div>
 
-<div>Use <em class="green">real-world</em> software tools</div>
+<div>Use <em class="green">Real-World</em> Software Tools</div>
 
-<div>Release <em class="scarlet">free and open-source</em> projects</em></div>
+<div>Run <em class="sky">Exciting</em> Experiments</div>
 
-<div>Get a <em class="plum">job</em></div>
+<div><em class="orange">Team</em> Projects</div>
 
-<!-- http://www.flickr.com/photos/gregpc/6336990111/sizes/l/in/photolist&#45;aDYJoc&#45;c8MbRQ&#45;cfFsx7&#45;8CcSVM&#45;azZkgk&#45;8WxXdP&#45;8CcR2v&#45;956jKN&#45;8Gi6gV&#45;8DSYTk&#45;ajxavD&#45;8fEKcJ&#45;7EeeJC&#45;8EgcBZ&#45;dsyesR&#45;aSk6qk&#45;aGUwTi&#45;aymMhG&#45;aNjGMv&#45;ancQ2j&#45;bpbCaa&#45;ba8QPg&#45;bNPsjv&#45;ayj51H&#45;ayj4qB&#45;aNjQWM&#45;aNjGvp&#45;aNjQ6p&#45;aF18qE&#45;aNjVAx&#45;dfZZZs&#45;brLFFU&#45;axtq2p&#45;8R6gr4&#45;ancQgm&#45;ajxaRe&#45;ajxbnP&#45;ejvYqC&#45;8eonCM&#45;aSyr98&#45;aNjMgH&#45;aNjLAT&#45;ajzZJG&#45;aDM5J3&#45;ancQMw&#45;aEWhE8&#45;ajxctc&#45;amXSfo&#45;axLuS6&#45;aDM5Ey&#45;aSk5Yc/ -->
-<div><img src = "../images/6336990111_afd069390c_b_d.jpg"/></div>
-<div><img src = "../images/6336990111_afd069390c_b_d.jpg"/>Found a <em class="plum">Job!</em></div>
-<div><img src = "../images//6336990111_afd069390c_b_d.jpg"/>Read the <em class="plum">Syllabus!</em></div>
+<div><em class="green">Writing</em> and <em>Speaking</em></div>
+
+<div><em class="green">Invitation</em></div>
+
+<div>"UNIX is basically a <em class="sky">simple</em> operating system, but you have to be a <em>genius</em> to understand the
+	simplicity."</div>
+
+<div>Dennis Ritchie</div>
+
+<div>Ready to become a <em>genius</em>?</div>
 
 </body>
 </html>
