First draft of a few slides for the first chapter.

--- a/slides/module1/cs440S2014-chapter1.html
+++ b/slides/module1/cs440S2014-chapter1.html
@@ -11,37 +11,11 @@
 
 <div>Gregory M. Kapfhammer</div>
 
-<div><em class="orange">Keep in touch!</em><p>Office Hours, Email, Web, Twitter</div>
-
 <DIV>Operating Systems</DIV>
 
-<div><img src="../images/Software.png"/></div>
-<div><img src="../images/Software.png"/><em class="orange">Software</em></div>
-	
-<div><img src='http://farm3.staticflickr.com/2484/3887600015_6c1b946772_z.jpg' /></div>
-<div><img src='http://farm3.staticflickr.com/2484/3887600015_6c1b946772_z.jpg' /><em>People</em></div>
-
-<div
-<div>Highlights of this course</div>
-
-<div><em class="scarlet">Important Concepts</em></div>
-
-<div>Use <em class="green">Real-World</em> Software Tools</div>
-
-<div>Run <em class="sky">Exciting</em> Experiments</div>
-
-<div><em class="orange">Team</em> Projects</div>
-
-<div><em class="green">Writing</em> and <em>Speaking</em></div>
-
-<div><em class="green">Invitation</em></div>
-
-<div>"UNIX is basically a <em class="sky">simple</em> operating system, but you have to be a <em>genius</em> to understand the
-	simplicity."</div>
-
-<div>Dennis Ritchie</div>
-
-<div>Ready to become a <em>genius</em>?</div>
+<!-- http://www.flickr.com/photos/hopefoote/2634393683/sizes/o/ -->
+<div><img src="../images/dragon.jpg"/></div>
+<div><img src="../images/dragon.jpg"/>Complexity</div>
 
 </body>
 </html>
