Added many slides for the chapter 1 in cmpsc 440.

--- a/slides/module1/cs440S2014-chapter1.html
+++ b/slides/module1/cs440S2014-chapter1.html
@@ -15,7 +15,51 @@
 
 <!-- http://www.flickr.com/photos/hopefoote/2634393683/sizes/o/ -->
 <div><img src="../images/dragon.jpg"/></div>
-<div><img src="../images/dragon.jpg"/>Complexity</div>
+<div><img src="../images/dragon.jpg"/><em class="sky">Complexity</em></div>
+
+<div>Interface</div>
+
+<div>Manage</div>
+
+<div><em>User</em> Interaction</div>
+
+<div>Mode of <em>Operating</em></div>
+
+<div>Which One?</div>
+
+<div>Kernel?</div>
+
+<div>User?</div>
+
+<div>Figure 1.1</div>
+
+<div>Can You?</div>
+
+<div>Distinctions</div>
+
+<div>Characteristics</div>
+
+<div>LOC</div>
+
+<div>FreeBSD</div>
+
+<div>6.25 m</div>
+
+<div>iOS</div>
+
+<div>80 m</div>
+
+<div>Linux</div>
+
+<div>15 m</div>
+
+<div>Minix</div>
+
+<div>4000</div>
+
+<div>Importance?</div>
+
+
 
 </body>
 </html>
