Added more slides, including another graphic.

--- a/slides/module1/cs440S2014-chapter1.html
+++ b/slides/module1/cs440S2014-chapter1.html
@@ -55,11 +55,13 @@
 
 <div>Minix</div>
 
-<div>4000</div>
+<div>4000 <em>!</em></div>
 
 <div>Importance?</div>
 
+<div>Architecture</div>
 
+<div><img src="../images/reims2.jpg"/></div>
 
 </body>
 </html>
