Adding in four new graphics and the current version of the slides.

--- a/slides/module1/cs440S2014-chapter1.html
+++ b/slides/module1/cs440S2014-chapter1.html
@@ -63,6 +63,12 @@
 
 <div><img src="../images/reims2.jpg"/></div>
 
+<div>Complexity requires ... </div>
+
+<div>Abstraction <em>!</em></div>
+
+<div><em class="plum">Files</div>
+
 </body>
 </html>
 
