Finished the slide up to the point about history.

--- a/slides/module1/cs440S2014-chapter1.html
+++ b/slides/module1/cs440S2014-chapter1.html
@@ -63,11 +63,27 @@
 
 <div><img src="../images/reims2.jpg"/></div>
 
-<div>Complexity requires ... </div>
+<div>Complexity</div>
 
-<div>Abstraction <em>!</em></div>
+<div>Abstraction</div>
 
-<div><em class="plum">Files</div>
+<div><em class="plum">Files</em></div>
+
+<div>User?</div>
+
+<div><img src="../images/manager.jpg"/></div>
+
+<div><em class="scarlet">Resource Manager</em></div>
+
+<div>Non-sharable</div>
+
+<div>Protection</div>
+
+<div>Multiplexing</div>
+
+<div>History</div>
+
+
 
 </body>
 </html>
