Added all of the slides up to the point about superscalar.

--- a/slides/module1/cs440S2014-chapter1.html
+++ b/slides/module1/cs440S2014-chapter1.html
@@ -83,7 +83,33 @@
 
 <div>History</div>
 
+<div>Instruction Cycle</div>
 
+<div><em class="orange">Fetch</em></div>
+
+<div><em class="green">Decode</em></div>
+
+<div><em class="sky">Execute</em></div>
+
+<div>Instruction Set Architecture</div>
+
+<div>Similarities?</div>
+
+<div>Differences?</div>
+
+<div><em class="plum">Program Counter</em></div>
+
+<div><em class="sky">Stack Pointer</em></div>
+
+<div><em class="orange">Program Status Word</em></div>
+
+<div>Context Switch</div>
+
+<div>CPUs</div>
+
+<div>Pipeline</div>
+
+<div>Superscalar</div>
 
 </body>
 </html>
