Started adding all of the slides for cs 440, including the os zoo.

--- a/slides/module1/cs440S2014-chapter1.html
+++ b/slides/module1/cs440S2014-chapter1.html
@@ -111,6 +111,68 @@
 
 <div>Superscalar</div>
 
+<div>Memory hierarchy</div>
+
+<div>Cache</div>
+
+<div>RAM</div>
+
+<div>ROM</div>
+
+<div>Flash</div>
+
+<div>Disks</div>
+
+<div>Platters</div>
+
+<div>SSD</div>
+
+<div><em>Implications?</em></div>
+
+<div><em class="green">I/O</em></div>
+
+<div>Device drivers</div>
+
+<div>Busy wait</div>
+
+<div>Interrupts</div>
+
+<div>DMA</div>
+
+<div>Bus</div>
+
+<div>BIOS</div>
+
+<div>Bootchart</div>
+
+<div><img src="http://www.bootchart.org/images/bootchart.debian.mcrae.0.png"/></div>
+
+<div>Make this <em>faster</em>?</div>
+
+<div>Parallelism</div>
+
+<div>Challenges?</div>
+
+<div>Types of Operating Systems</div>
+
+<div>Mainframe</div>
+
+<div>Server</div>
+
+<div>Multiprocessor</div>
+
+<div>PC</div>
+
+<div>Mobile</div>
+
+<div>Embedded</div>
+
+<div>Sensor</div>
+
+<div>Real-time</div>
+
+<div>QoS</div>
+
 </body>
 </html>
 
