Added extra slides about the os zoo. Finished for now.

--- a/slides/module1/cs440S2014-chapter1.html
+++ b/slides/module1/cs440S2014-chapter1.html
@@ -171,6 +171,16 @@
 
 <div>Real-time</div>
 
+<div>Smartcards</div>
+
+<div><em class="plum">Constraints?</em></div>
+
+<div>Time</div>
+
+<div>Computational Power</div>
+
+<div>Memory</div>
+
 <div>QoS</div>
 
 </body>
