Adding the slides about paths, now starting content about os structure.

--- a/slides/module1/cs440S2014-chapter1.html
+++ b/slides/module1/cs440S2014-chapter1.html
@@ -213,7 +213,17 @@
 
 <div><em class="sky">Absolute</em></div>
 
-<div><em>Mounting</em></div>
+<div><em class="scarlet">Mounting</em></div>
+
+<div><em>Pipe</em></div>
+
+<div><em class="green">Filter</em></div>
+
+<div><em>Virtual</em> Memory</div>
+
+<div>Structure</div>
+
+
 
 </body>
 </html>
