--- a/slides/module1/cs440S2014-chapter1.html
+++ b/slides/module1/cs440S2014-chapter1.html
@@ -223,7 +223,23 @@
 
 <div>Structure</div>
 
+<div>Monolithic</div>
 
+<div><img src="../images/confused_man.jpg"/></div>
+
+<div><em>Layered</em></div>
+
+<div>See Figure 1-25</div>
+
+<div><em class="green">Microkernel</em></div>
+
+<div>Put it all is <em class="green">user</em> mode!</div>
+
+<div><em class="scarlet">Reincarnation</em></div>
+
+<div><em class="sky">Mechanism</em> and <em class="plum">Policy</em></div>
+
+<div><em>Virtual</em> Machines</div>
 
 </body>
 </html>
