Adding two additional slides to the content in Chapter 1. Finished?

--- a/slides/module1/cs440S2014-chapter1.html
+++ b/slides/module1/cs440S2014-chapter1.html
@@ -239,7 +239,19 @@
 
 <div><em class="sky">Mechanism</em> and <em class="plum">Policy</em></div>
 
+<div>Client-Server</div>
+
 <div><em>Virtual</em> Machines</div>
+
+<div>Types 1 and 2</div>
+
+<div>See Figure 1-29</div>
+
+<div><em class="sky">JVM</em></div>
+
+<div>WORA</div>
+
+<div>How?</div>
 
 </body>
 </html>
