Added in the slide that includes a screenshot of the cs web site.

--- a/slides/module1/cs440S2014-chapter2.html
+++ b/slides/module1/cs440S2014-chapter2.html
@@ -16,6 +16,8 @@
 <!-- <div><img src="../images/Software.png"/></div> -->
 <!-- <div><img src="../images/Software.png"/><em class="orange">Software</em></div> -->
 
+<div><img src="../images/csweb.png"/></div>
+
 <div>Process</div>
 
 <div>Threads</div>
