Added more slides related to the process and the thread. chapter 2.

--- a/slides/module1/cs440S2014-chapter2.html
+++ b/slides/module1/cs440S2014-chapter2.html
@@ -28,8 +28,13 @@
 
 <div>Multiprogramming</div>
 
-<!-- http://farm5.staticflickr.com/4124/5027799804_7f4aa1ed02_b_d.jpg -->
+<div>Time quantum</div>
 
+<div><em>10</em> ms</div>
+
+<div><em>100</em> ms</div>
+
+<!-- http://farm5.staticflickr.com/4124/5027799804_7f4aa1ed02_b_d.jpg -->
 <div><img src="../images/birthday_cake.jpg"/></div>
 
 <div>Process = <em>?</em></div>
@@ -42,7 +47,7 @@
 
 <div>State</div>
 
-<div><em class="plum">Creating</em> a process?</div>
+<div>When is a process <em class="plum">created</em>?</div>
 
 <div>Initialization</div>
 
@@ -51,6 +56,24 @@
 <div>User Request</div>
 
 <div>Batch Job</div>
+
+<div align="center"><tt>top</tt></div>
+
+<div align="center"><tt>ps</tt></div>
+
+<div align="center"><tt>fork</tt></div>
+
+<div>Page 87 - 88</div>
+
+<div>Process Termination?</div>
+
+<div>Normal Exit</div>
+
+<div>Error Exit</div>
+
+<div>Fatal Error</div>
+
+<div>Killed</div>
 
 </body>
 </html>
