Added in a lot of slides up to the ones about race conditions.

--- a/slides/module1/cs440S2014-chapter2.html
+++ b/slides/module1/cs440S2014-chapter2.html
@@ -75,6 +75,49 @@
 
 <div>Killed</div>
 
+<div>Process States</div>
+
+<div>Running</div>
+
+<div>Ready</div>
+
+<div>Blocked</div>
+
+<div>Blocking Causes?</div>
+
+<div>Count off by <em class="plum">Threes</em></div>
+
+<div>Threads</div>
+
+<div>java.lang.Thread</div>
+
+<div><img src="../images/csweb.png"/></div>
+
+<div>Web Server</div>
+
+<div>Figure 2-8</div>
+
+<div><em class="scarlet">Compare</em> and <em class="sky">Contrast</em></div>
+
+<div>Figure 2-11</div>
+
+<div><em>Context Switch!</em></div>
+
+<div>Threads in <em class="green">User</em> Space</div>
+
+<div>Figure 2-16</div>
+
+<div><em>Single</em>-Threaded to <em class="sky">Multi</em>-Threaded</div>
+
+<div><em>How?</em></div>
+
+<div><em class="plum">Challenges?</em></div>
+
+<!-- http://www.flickr.com/photos/tfxc/12162848954/sizes/l/ -->
+<div><img src="../images/running.jpg"/></div>
+
+<div>Race Conditions</div>
+
 </body>
 </html>
 
