Adding the final slides up to the bounded buffer problem.

--- a/slides/module1/cs440S2014-chapter2.html
+++ b/slides/module1/cs440S2014-chapter2.html
@@ -118,6 +118,17 @@
 
 <div>Race Conditions</div>
 
+<div>Mutual Exclusion</div>
+
+<div>Critical Regions</div>
+
+<div>Page 119</div>
+
+<div>Figure 2-22</div>
+
+<div><em>Producer-Consumer</em> Model</div>
+
+<div><em class="sky">Bounded-Buffer</em> Problem</div>
 </body>
 </html>
 
