Adding in the slides about the semaphores and the barriers.

--- a/slides/module1/cs440S2014-chapter2.html
+++ b/slides/module1/cs440S2014-chapter2.html
@@ -129,6 +129,19 @@
 <div><em>Producer-Consumer</em> Model</div>
 
 <div><em class="sky">Bounded-Buffer</em> Problem</div>
+
+<div>Synchronized</div>
+
+<div>Semaphores</div>
+
+<div>Binary</div>
+
+<div>Counting</div>
+
+<div>Barriers</div>
+
+
+
 </body>
 </html>
 
