Adding in the extra slides about the scheduling algorithms.

--- a/slides/module1/cs440S2014-chapter2.html
+++ b/slides/module1/cs440S2014-chapter2.html
@@ -140,6 +140,43 @@
 
 <div>Barriers</div>
 
+<div><em class="scarlet">Scheduling</em></div>
+
+<div>Important!</div>
+
+<div>Process Behavior</div>
+
+<div><em>Compute</em>-bound</div>
+
+<div><em class="green">I/O</em>-bound</div>
+
+<div>When to Schedule?</div>
+
+<div>Process Creation</div>
+
+<div>Process Exit</div>
+
+<div>Process Block</div>
+
+<div>I/O Interrupt</div>
+
+<!-- http://farm4.staticflickr.com/3100/2661018158_e1ecf70291_b_d.jpg -->
+<div><img src="../images/clock.jpg"/></div>
+
+<div>Clock Interrupt</div>
+
+<div>Non-preemptive</div>
+
+<div>Preemptive</div>
+
+<div>Scheduling Algorithms</div>
+
+<div>Batch</div>
+
+<div>Interactive</div>
+
+<div>Real-time</div>
+
 
 
 </body>
