Adding the extra content about the scheduling algorithms.

--- a/slides/module1/cs440S2014-chapter2.html
+++ b/slides/module1/cs440S2014-chapter2.html
@@ -177,7 +177,19 @@
 
 <div>Real-time</div>
 
+<div>Figure 2-39</div>
 
+<div>Page 151</div>
+
+<div>Throughput</div>
+
+<div>Turnaround time</div>
+
+<div>Response time</div>
+
+<div>Proportionality</div>
+
+<div>Scheduling Algorithms</div>
 
 </body>
 </html>
