Adding in the slides about the scheduling methods.

--- a/slides/module1/cs440S2014-chapter2.html
+++ b/slides/module1/cs440S2014-chapter2.html
@@ -191,11 +191,37 @@
 
 <div>Scheduling Algorithms</div>
 
+<div>Batch</div>
+
 <div>Non-preemptive</div>
 
 <div>FCFS</div>
 
-<div></div>
+<div>SJF</div>
+
+<div>Provably <em class="sky">Optimal</em></div>
+
+<div>Simultaneous arrival</div>
+
+<div>Count off by <em class="green">fives</em></div>
+
+<div>SJF <em>Good</em>?</div>
+
+<div>SJF <em class="scarlet">Bad</em>?</div>
+
+<div>SJF Preemptive?</div>
+
+<div>Interactive</div>
+
+<div>Round-Robin</div>
+
+<div>Priority</div>
+
+<div>Multiple Queues</div>
+
+<div>Policy versus Mechanism</div>
+
+<div>Thread Scheduling</div>
 
 </body>
 </html>
