Adding the template for the final grades in CMPSC 440, adding from 112 s 2014.

--- a/slides/module1/cs440S2014-chapter2.html
+++ b/slides/module1/cs440S2014-chapter2.html
@@ -191,7 +191,7 @@
 
 <div>Scheduling Algorithms</div>
 
-<div>Batch</div>
+<div><em>Batch</em></div>
 
 <div>Non-preemptive</div>
 
@@ -209,9 +209,9 @@
 
 <div>SJF <em class="scarlet">Bad</em>?</div>
 
-<div>SJF Preemptive?</div>
+<div>SJF <em class="plum">Preemptive</em>?</div>
 
-<div>Interactive</div>
+<div><em>Interactive</em></div>
 
 <div>Round-Robin</div>
 
@@ -219,7 +219,7 @@
 
 <div>Multiple Queues</div>
 
-<div>Policy versus Mechanism</div>
+<div><em class="sky">Policy</em> versus <em class="scarlet">Mechanism</em></div>
 
 <div>Thread Scheduling</div>
 
