Writing out the draft of some of the first slides for chapter 3.

--- a/slides/module2/cs440S2014-chapter3.html
+++ b/slides/module2/cs440S2014-chapter3.html
@@ -15,7 +15,41 @@
 
 <DIV>Operating Systems</DIV>
 
+<div>Memory Hierarchy</div>
 
+<div>RAM</div>
+
+<div>ROM</div>
+
+<div>BIOS</div>
+
+<div>Memory Management Unit</div>
+
+<div>How do we ... </div>
+
+<div>Organize</div>
+
+<div>and Access</div>
+
+<div>Memory?</div>
+
+<div>No Memory Abstraction</div>
+
+<div>All Access!</div>
+
+<div>Multiple Programs?</div>
+
+<div>Well ...</div>
+
+<div>Yes and No</div>
+
+<div>Swap All</div>
+
+<div>Other Methods</div>
+
+<div>But, Complications</div>
+
+<div>Solution?</div>
 
 </body>
 </html>
