Adding in the updated version of chapter 3 slides with graphics.

--- a/slides/module2/cs440S2014-chapter3.html
+++ b/slides/module2/cs440S2014-chapter3.html
@@ -35,6 +35,8 @@
 
 <div>No Memory Abstraction</div>
 
+<div><img src="../images/allaccess.jpg"/></div>
+
 <div>All Access!</div>
 
 <div>Multiple Programs?</div>
@@ -50,6 +52,23 @@
 <div>But, Complications</div>
 
 <div>Solution?</div>
+
+<div>Address Space</div>
+
+<div>Base and Limit Registers</div>
+
+<div>Page 183</div>
+
+<div>Enough Memory?</div>
+
+<div>Swapping</div>
+
+<div>Holes</div>
+
+<div><img src="../images/garbagetruck.jpg"/></div>
+
+<div>Memory Compaction</div>
+
 
 </body>
 </html>
