Added in some more colors and reformatted some of the chapter 3 slides.

--- a/slides/module2/cs440S2014-chapter3.html
+++ b/slides/module2/cs440S2014-chapter3.html
@@ -27,9 +27,9 @@
 
 <div>How do we ... </div>
 
-<div>Organize</div>
+<div><em>Organize</em></div>
 
-<div>and Access</div>
+<div>and <em class="green">Access</em></div>
 
 <div>Memory?</div>
 
@@ -53,17 +53,17 @@
 
 <div>Solution?</div>
 
-<div>Address Space</div>
+<div><em class="plum">Address Space</em></div>
 
-<div>Base and Limit Registers</div>
+<div><em class="scarlet">Base</em> and <em class="sky">Limit</em> Registers</div>
 
 <div>Page 183</div>
 
-<div>Enough Memory?</div>
+<div>Not <em>Enough</em> Memory?</div>
 
 <div>Swapping</div>
 
-<div>Holes</div>
+<div>Holes?</div>
 
 <div><img src="../images/garbagetruck.jpg"/></div>
 
