Added the first slide about virtual memory. Enough for this class.

--- a/slides/module2/cs440S2014-chapter3.html
+++ b/slides/module2/cs440S2014-chapter3.html
@@ -69,6 +69,39 @@
 
 <div>Memory Compaction</div>
 
+<div>Growth Management</div>
+
+<div>Free Memory</div>
+
+<div>Bitmaps</div>
+
+<div>0 = <em>Free</em></div>
+
+<div>1 = <em class="green">Allocated</em></div>
+
+<div>Linked List</div>
+
+<div><em class="green">Allocate</em> Memory</div>
+
+<div><em>First</em> Fit</div>
+
+<div><em class="scarlet">Next</em> Fit</div>
+
+<div><em class="sky">Best</em> Fit</div>
+
+<div><em class="plum">Worst</em> Fit</div>
+
+<div><em class="green">Quick</em> Fit</div>
+
+<div>Which is best?</div>
+
+<div>How to determine?</div>
+
+<div>Simulation</div>
+
+<div>Virtual Memory</div>
+
+
 
 </body>
 </html>
