Added slides up to the optimal page replacement algorithm.

--- a/slides/module2/cs440S2014-chapter3.html
+++ b/slides/module2/cs440S2014-chapter3.html
@@ -103,17 +103,21 @@
 
 <div>Challenge?</div>
 
-<div>Large Programs</div>
+<div><em>Large</em> Programs</div>
 
-<div>Many Programs</div>
+<div><em class="scarlet">Many</em> Programs</div>
 
-<div>Small Physical Memory</div>
+<div><em class="green">Small</em> Physical Memory</div>
 
 <div>Pages</div>
 
+<div>Continuous range of addresses</div>
+
+<div>Not all in physical memory</div>
+
 <div>Paging</div>
 
-<div>Virtual Addresses > Physical Addresses</div>
+<div><em>Virtual</em> Addresses > <em class="sky">Physical</em> Addresses</div>
 
 <div>MMU</div>
 
@@ -124,6 +128,34 @@
 <div>Input: Virtual Page</div>
 
 <div>Output: Physical Page</div>
+
+<div>Paging Challenges</div>
+
+<div>Virtual to physical must be <em>fast</em></div>
+
+<div>Large virtual address space implies large page table</div>
+
+<div>Locality to the rescue!</div>
+
+<div>Few page table entries are heavily read</div>
+
+<div>TLB</div>
+
+<div>Multiple levels of abstraction</div>
+
+<div>"All problems in computer science can be solved by another level of indirection"</div>
+
+<div>David Wheeler</div>
+
+<div>Page Replacement</div>
+
+<div>Page fault requires eviction</div>
+
+<div>Why?</div>
+
+<div>Which page for eviction?</div>
+
+<div>Optimal</div>
 
 </body>
 </html>
