Added several additional slides, up to the optimal page replacement algorithm.

--- a/slides/module2/cs440S2014-chapter3.html
+++ b/slides/module2/cs440S2014-chapter3.html
@@ -109,11 +109,13 @@
 
 <div><em class="green">Small</em> Physical Memory</div>
 
+<div><img src="../images/pages.jpg"/></div>
+
 <div>Pages</div>
 
-<div>Continuous range of addresses</div>
+<div><em>Continuous</em> range of addresses</div>
 
-<div>Not all in physical memory</div>
+<div>Not <em class="green">all</em> in physical memory</div>
 
 <div>Paging</div>
 
@@ -125,21 +127,25 @@
 
 <div>Page Table</div>
 
-<div>Input: Virtual Page</div>
+<div><em class="sky">Input</em>: Virtual Page</div>
 
-<div>Output: Physical Page</div>
+<div><em class="sky">Output</em>: Physical Page</div>
 
 <div>Paging Challenges</div>
 
 <div>Virtual to physical must be <em>fast</em></div>
 
-<div>Large virtual address space implies large page table</div>
+<div><em class="plum">Large</em> virtual address space implies <em class="plum">large</em> page table</div>
 
-<div>Locality to the rescue!</div>
+<div><em>Locality</em> to the rescue!</div>
 
-<div>Few page table entries are heavily read</div>
+<div><em class="green">Few</em> page table entries are <em class="green">heavily</em> read</div>
+
+<div>Keep those pages <em>most</em> needed</div>
 
 <div>TLB</div>
+
+<div>Dedicated hardware</div>
 
 <div>Multiple levels of abstraction</div>
 
