Added more slides about page replacement. Enough for Tuesday.

--- a/slides/module2/cs440S2014-chapter3.html
+++ b/slides/module2/cs440S2014-chapter3.html
@@ -155,13 +155,17 @@
 
 <div>Page Replacement</div>
 
-<div>Page fault requires eviction</div>
+<div>Page <em class="sky">fault</em> requires <em class="sky">eviction</em></div>
 
 <div>Why?</div>
 
 <div>Which page for eviction?</div>
 
-<div>Optimal</div>
+<div><em class="plum">Optimal</em></div>
+
+<div>Not realistic!</div>
+
+<div>Realistic but effective?</div>
 
 </body>
 </html>
