Added in the slide that includes the label for page replacement algorithms.

--- a/slides/module2/cs440S2014-chapter3.html
+++ b/slides/module2/cs440S2014-chapter3.html
@@ -161,11 +161,15 @@
 
 <div>Which page for eviction?</div>
 
+<div>Page replacement algorithms</div> 
+
 <div><em class="plum">Optimal</em></div>
 
 <div>Not realistic!</div>
 
 <div>Realistic but effective?</div>
+
+
 
 </body>
 </html>
