Added all of the details about the not recently  used method.

--- a/slides/module2/cs440S2014-chapter3.html
+++ b/slides/module2/cs440S2014-chapter3.html
@@ -169,6 +169,35 @@
 
 <div>Realistic but effective?</div>
 
+<div>Determining "use" is hard!</div>
+
+<div>R - referenced</div>
+
+<div>M - modified</div>
+
+<div>Contained in the page table</div>
+
+<div>Updated on every memory reference</div>
+
+<div>Set by the hardware</div>
+
+<div>R cleared on clock interrupt</div>
+
+<div>If we have a page fault ...</div>
+
+<div>Four categories</div>
+
+<div>Class 0: R=0, M=0</div>
+
+<div>Class 1: R=0, M=1</div>
+
+<div>Class 2: R=1, M=0</div>
+
+<div>Class 3: R=1, M=1</div>
+
+<div>NRU: Not recently used</div>
+
+<div>NRU removes a page, at random, from the lowest class</div>
 
 
 </body>
