Adding the slides up to the wsclock algorithm.

--- a/slides/module2/cs440S2014-chapter3.html
+++ b/slides/module2/cs440S2014-chapter3.html
@@ -207,6 +207,52 @@
 
 <div>If we have a page fault ...</div>
 
+<div>Remove the page at the head</div>
+
+<div>Drawbacks?</div>
+
+<div>Don't remove pages that are recently referenced!</div>
+
+<div><em>Second</em> Chance</div>
+
+<div>R=1 means <em>reset</em> and <em class="green">end</em> of queue</div>
+
+<div>But ...</div>
+
+<div>Pages are always moved around the list</div>
+
+<div><img src="../images/clock.jpg"/></div>
+
+<div>Clock</div>
+
+<div>Page 206</div>
+
+<div>R=0 : Evict</div>
+
+<div>R=1 : Reset R and advance</div>
+
+<div>Another alternative?</div>
+
+<div>LRU</div>
+
+<div>Linked list of <em class="green">all</em> pages in memory</div>
+
+<div>Update the list on <em>every</em> memory access!</div>
+
+<div>Expensive</div>
+
+<div>Dedicated hardware</div>
+
+<div>Working Set</div>
+
+<div>Denning</div>
+
+<div>Page 210</div>
+
+<div>Working Set + Clock = ?</div>
+
+<div>WSClock</div>
+
 </body>
 </html>
 
