More comments about optimal. Final slides for class today.

--- a/slides/module2/cs440S2014-chapter3.html
+++ b/slides/module2/cs440S2014-chapter3.html
@@ -167,6 +167,8 @@
 
 <div><em class="plum">Optimal</em></div>
 
+<div>Label each page with the <em>number</em> of instructions executed before <em class="sky">first</em> reference</div>
+
 <div>Not realistic!</div>
 
 <div>Realistic but effective?</div>
