Adding the final slides that dictate the group work.

--- a/slides/module2/cs440S2014-chapter3.html
+++ b/slides/module2/cs440S2014-chapter3.html
@@ -255,6 +255,10 @@
 
 <div>WSClock</div>
 
+<div>Count off by fours</div>
+
+<div><em>MMU</em> and the <em class="green">OS</em></div>
+
 </body>
 </html>
 
