Finished the slides up to the content in Section 4.1, just cov intro.

--- a/slides/module2/cs440S2014-chapter4.html
+++ b/slides/module2/cs440S2014-chapter4.html
@@ -19,10 +19,49 @@
 
 <div>Why?</div>
 
-<div>Store and Retrieve</div>
+<div><em>Store</em> and <em class="green">Retrieve</em></div>
 
 <div>Did not exist?</div>
 
+<div>Examples?</div>
+
+<div>Characteristics?</div>
+
+<div><em class="sky">Size</em></div>
+
+<div><em class="plum">Persistence</em></div>
+
+<div><em class="scarlet">Sharing</em></div>
+
+<div>Magnetic Disks</div>
+
+<div>SSDs</div>
+
+<div><em>Read</em> block k</div>
+
+<div><em class="green">Write</em> block k</div>
+
+<div>Find?</div>
+
+<div>Protect?</div>
+
+<div>Free?</div>
+
+<div>Concrete example: permissions</div>
+
+<div>ls -alg</div>
+
+<div>chmod</div>
+
+<div>Files</div>
+
+<div>Persistent</div>
+
+<div>File system</div>
+
+<div>Files as an <em>abstraction</em> mechanism</div>
+
+<div>File naming</div>
 
 
 </body>
