Added in extra content about the file types.

--- a/slides/module2/cs440S2014-chapter4.html
+++ b/slides/module2/cs440S2014-chapter4.html
@@ -63,6 +63,55 @@
 
 <div>File naming</div>
 
+<div>Special characters?</div>
+
+<div>Capitalization?</div>
+
+<div>Unix</div>
+
+<div>MS-DOS</div>
+
+<div>Two part file names</div>
+
+<div>Purpose?</div>
+
+<div>Unix</div>
+
+<div>Convention</div>
+
+<div>Human readable</div>
+
+<div>.htm vs .html</div>
+
+<div>Difference?</div>
+
+<div>.tex</div>
+
+<div>Connect to Programs</div>
+
+<div>Types of File</div>
+
+<div>Regular</div>
+
+<div>Directory</div>
+
+<div>Special</div>
+
+<div>ASCII</div>
+
+<div>Unicode</div>
+
+<div>Text</div>
+
+<div>Binary</div>
+
+<div>vim usesizeof</div>
+
+<div>strings usesizeof</div>
+
+<div>Meaning?</div>
+
+
 
 </body>
 </html>
