All the way up to the slides related to symbolic links.

--- a/slides/module2/cs440S2014-chapter4.html
+++ b/slides/module2/cs440S2014-chapter4.html
@@ -111,7 +111,43 @@
 
 <div>Meaning?</div>
 
+<div>Sequential files</div>
 
+<div>Random-access files</div>
+
+<div>Database?</div>
+
+<div>Attributes</div>
+
+<div>Metadata</div>
+
+<div>Page 263</div>
+
+<div>File operations</div>
+
+<div>Page 265</div>
+
+<div>Directories</div>
+
+<div>Hierarchy</div>
+
+<div>Absolute path</div>
+
+<div>Relative path</div>
+
+<div>Working directory</div>
+
+<div>Directory operations</div>
+
+<div>Page 272</div>
+
+<div>Hard link</div>
+
+<div>Soft link</div>
+
+<div>Cycles</div>
+
+<div>Let's try it!</div>
 
 </body>
 </html>
