Adding in the slides about the partitions of a file system.

--- a/slides/module2/cs440S2014-chapter4.html
+++ b/slides/module2/cs440S2014-chapter4.html
@@ -151,6 +151,18 @@
 
 <div>ln -s</div>
 
+<div>MBR</div>
+
+<div>Partitions</div>
+
+<div><code>/etc/fstab</code></div>
+
+<div>Meaning?</div>
+
+<div>"sd" used to mean "SCSI device"</div>
+
+<div>Partition number</div>
+
 </body>
 </html>
 
