Added in the text up to contiguous allocation of the files.

--- a/slides/module2/cs440S2014-chapter4.html
+++ b/slides/module2/cs440S2014-chapter4.html
@@ -163,6 +163,28 @@
 
 <div>Partition number</div>
 
+<div>Boot block</div>
+
+<div>Superblock</div>
+
+<div>File implementation</div>
+
+<div>Allocation?</div>
+
+<div>Contiguous</div>
+
+<div>How does it work?</div>
+
+<div>Page 275</div>
+
+<div>Problems?</div>
+
+<div>Disk fragmentation</div>
+
+<div>Feasibility of compaction?</div>
+
+<div>Holing filing?</div>
+
 </body>
 </html>
 
