Adding the slides up to the one starting the discussion about directories.

--- a/slides/module2/cs440S2014-chapter4.html
+++ b/slides/module2/cs440S2014-chapter4.html
@@ -185,6 +185,22 @@
 
 <div>Holing filing?</div>
 
+<div>Alternatives?</div>
+
+<div>FAT</div>
+
+<div>Page 278</div>
+
+<div>Does not <em class="sky">scale</em> to large disks!</div>
+
+<div>inodes</div>
+
+<div><em class="green">Per-file</em> index</div>
+
+<div>Unix</div>
+
+<div>Directories</div>
+
 </body>
 </html>
 
