Added in the final slides for the fourth chapter.

--- a/slides/module2/cs440S2014-chapter4.html
+++ b/slides/module2/cs440S2014-chapter4.html
@@ -183,7 +183,7 @@
 
 <div>Feasibility of compaction?</div>
 
-<div>Holing filing?</div>
+<div>Hole filing?</div>
 
 <div>Alternatives?</div>
 
@@ -201,6 +201,39 @@
 
 <div>Directories</div>
 
+<div>Linear Searching</div>
+
+<div>Hashing</div>
+
+<div>Shared Files</div>
+
+<div>DAG</div>
+
+<div>Symbolic Links</div>
+
+<div>Hard links</div>
+
+<div>Compare and contrast?</div>
+
+<div>"Robustness in the face of failure"</div>
+
+<div>LFS</div>
+
+<div>JFS</div>
+
+<div>Idempotency</div>
+
+<div>Additional Topics</div>
+
+<div>Disk Quotas</div>
+
+<div>Disk Backups</div>
+
+<div>Cache</div>
+
+<div>Defragmentation</div>
+
+<div>Cloud Storage</div>
 </body>
 </html>
 
