Added some more color to the slides.

--- a/slides/module2/cs440S2014-chapter4.html
+++ b/slides/module2/cs440S2014-chapter4.html
@@ -197,13 +197,15 @@
 
 <div><em class="green">Per-file</em> index</div>
 
+<div>Find blocks of the file</div>
+
 <div>Unix</div>
 
 <div>Directories</div>
 
-<div>Linear Searching</div>
+<div><em>Linear</em> Searching</div>
 
-<div>Hashing</div>
+<div><em class="sky">Hashing</em></div>
 
 <div>Shared Files</div>
 
@@ -215,13 +217,13 @@
 
 <div>Compare and contrast?</div>
 
-<div>"Robustness in the face of failure"</div>
+<div>"Robustness in the face of <em class="scarlet">failure</em>"</div>
 
 <div>LFS</div>
 
 <div>JFS</div>
 
-<div>Idempotency</div>
+<div><em class="green">Idempotency</em></div>
 
 <div>Additional Topics</div>
 
