Adding extra content to the slides for chapter 5. Nearly done for now.

--- a/slides/module3/cs440S2014-chapter5.html
+++ b/slides/module3/cs440S2014-chapter5.html
@@ -23,13 +23,55 @@
 
 <div>X Windows Systems</div>
 
-<div>X Server</div>
+<div>X <em class="scarlet">Server</em></div>
 
-<div>X Client</div>
+<div>X <em class="orange">Client</em></div>
 
-<div>X Protocol</div>
+<div>X <em class="plum">Protocol</em></div>
 
 <div>Figure 5-37</div>
+
+<div>Window Manager</div>
+
+<div>X11 <em class="green">Forwarding</em></div>
+
+<div><em class="sky">Synergy</em></div>
+
+<div>http://synergy-foss.org/</div>
+
+<div>Thin Clients</div>
+
+<div>Fat Clients</div>
+
+<div>Preference?</div>
+
+<div>Popularity?</div>
+
+<div>Power Management</div>
+
+<div>Why?</div>
+
+<div>Mobile</div>
+
+<div>Server</div>
+
+<div>Two Strategies</div>
+
+<div>Turn <em class="orange">off</em> Devices</div>
+
+<div>Use <em class="sky">Less</em> Energy</div>
+
+<div>Power Consumption Profile</div>
+
+<div>Most on a laptop?</div>
+
+<div>Figure 5-45</div>
+
+<div>CPU Scaling</div>
+
+<div><em class="green">Acceptable</em> Temperature Range?</div>
+
+<div>ACPI</div>
 
 </body>
 </html>
