Adding in the final version of the slides for chapter 6 about deadlocks.

--- a/slides/module3/cs440S2014-chapter6.html
+++ b/slides/module3/cs440S2014-chapter6.html
@@ -19,6 +19,83 @@
 
 <div>Serious Problem</div>
 
+<div>Intuitive Example</div>
+
+<div>Scanner</div>
+
+<div>CD Recorder</div>
+
+<div>Deadlock!</div>
+
+<div>Resources</div>
+
+<div>Devices, data records, files, hardware, ...</div>
+
+<div>Acquire</div>
+
+<div>Use</div>
+
+<div>Release</div>
+
+<div>Differences!</div>
+
+<div>Preemptible</div>
+
+<div>Non-preemptible</div>
+
+<div>When denied?</div>
+
+<div>Wait and try again ...</div>
+
+<div>Formal Definition</div>
+
+<div>Page 437</div>
+
+<div>Conditions for Deadlock</div>
+
+<div>Mutual Exclusion</div>
+
+<div>Hold and Wait</div>
+
+<div>No Preemption</div>
+
+<div>Circular Wait</div>
+
+<div><em class="green">All</em> must be present!</div>
+
+<div>RAG</div>
+
+<div>Page 439</div>
+
+<div>Four Strategies</div>
+
+<div>Ignore the problem</div>
+
+<div>Detection and Recovery </div>
+
+<div>Dynamic Avoidance</div>
+
+<div>Prevention</div>
+
+<div>Strategy Details</div>
+
+<div>Detection and Recovery</div>
+
+<div>Cycle detection</div>
+
+<div>Dynamic Avoidance</div>
+
+<div>Safe and Unsafe</div>
+
+<div>Prevention</div>
+
+<div>Structural Negation</div>
+
+<div>OS Responsibility</div>
+
+<div>Language Responsibility</div>
+
+<div>Programmer Responsibility</div>
 
 </body>
 </html>
