Adding the final slides to the chapter 6 content on deadlock.

--- a/slides/module3/cs440S2014-chapter6.html
+++ b/slides/module3/cs440S2014-chapter6.html
@@ -97,6 +97,42 @@
 
 <div>Programmer Responsibility</div>
 
+<div>Applications in Other Domains</div>
+
+<div>Databases</div>
+
+<div>Distributed Systems</div>
+
+<div>Two-phase locking</div>
+
+<div>2PL</div>
+
+<div>Phase One</div>
+
+<div>Lock all needed records</div>
+
+<div>Phase Two</div>
+
+<div>Perform Updates</div>
+
+<div>Release Locks</div>
+
+<div>Cannot get your locks?</div>
+
+<div>Release and Start Over</div>
+
+<div>Starvation</div>
+
+<div>You <em>never</em> get your resource!</div>
+
+<div>How?</div>
+
+<div>Busy System and SJF</div>
+
+<div>Solution?</div>
+
+<div>Try FCFS!</div>
+
 </body>
 </html>
 
