Added in the content about distributed systems.

--- a/slides/module3/cs440S2014-chapter8.html
+++ b/slides/module3/cs440S2014-chapter8.html
@@ -25,12 +25,35 @@
 
 <div>Distributed System</div>
 
+<div>What is it?</div>
+
 <div>Page 581</div>
 
 <div>Figure 8-29</div>
 
 <div>Distributed Systems are <em>Loosely</em> <em>Coupled</em></div>
 
+<div>Middleware</div>
+
+<div>Figure 8-30</div>
+
+<div>"Operating System of the Distributed System"</div>
+
+<div><em class="sky">Transparency</em></div>
+
+<div>Examples?</div>
+
+<div>CORBA</div>
+
+<div>Jini and JavaSpaces</div>
+
+<div>Linda</div>
+
+<div>Publish/Subscribe</div>
+
+<div>LANs</div>
+
+<div>WANs</div>
 
 </body>
 </html>
