Adding in some of the virt slides.

--- a/slides/module3/cs440S2014-chapter8.html
+++ b/slides/module3/cs440S2014-chapter8.html
@@ -57,6 +57,13 @@
 
 <div>WANs</div>
 
+<div>Virtualization</div>
+
+<div>Host OS</div>
+
+<div>Guest OS</div>
+
+<div>Architecture Support</div>
 </body>
 </html>
 
