Added in the final draft of the slides for chapter 9 on security.

--- a/slides/module3/cs440S2014-chapter9.html
+++ b/slides/module3/cs440S2014-chapter9.html
@@ -29,6 +29,30 @@
 
 <div><em class="green">Responses?</em></div>
 
+<div>Plain Text</div>
+
+<div>Cipher Text</div>
+
+<div>Security by <em class="scarlet">Obscurity</em></div>
+
+<div><em class="sky">Kerckhoff</em>'s Principle</div>
+
+<div>Algorithm is <em>public</em></div>
+
+<div>Key(s) are <em>secret</em></div>
+
+<div>Trusted Platform Module</div>
+
+<div>TPM</div>
+
+<div>Cryptoprocessor</div>
+
+<div>NVRAM with Keys</div>
+
+<div>Linux Security</div>
+
+<div>Trade-offs?</div>
+
 </body>
 </html>
 
